# diploma

./: .gitignore  CMakeLists.txt  converterjson.cpp  main.cpp
=docs/: file001.txt  file003.txt
config/: answers.json  answers2.json  config.json  requests.json
include/: converterjson.h  invertedindex.h  searchserver.h
resources/: file001.txt  file002.txt
src/: CMakeLists.txt  converterjson.cpp  invertedindex.cpp  main.cpp  searchserver.cpp
tests/: CMakeLists.txt  indextests.cpp  servertests.cpp  tryaltest.cpp
